# mail.tm

./: .gitignore  404.html  LICENSE.md  README.md  dev-requirements.txt  index.html  log.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  test.py  test2.py
docs/: embeds_pretty.json  index.md
docs/docs/server/: events.md  limitations.md  server.md
docs/home/: client.md  future.md  implementation.md
docs/references/: abc.md  async-client.md  errors.md  methods.md  pullers.md  sync-client.md
docs/server/: events.md  implementation.md  limitations.md  server.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/client/: server.md
home/client/: index.html
home/future/: index.html
mailtm/: __init__.py  __main__.py  cli.py  server.py
mailtm/abc/: __init__.py  generic.py  modals.py
mailtm/core/: __init__.py  errors.py  events.py  methods.py
mailtm/impls/: __init__.py  client.py  pullers.py  xclient.py
mailtm/server/: __init__.py  cache.py  events.py  impl.py  server.py  srv.py  srvclient.py
mailtm/server/assets/: banner.txt
references/abc/: index.html
references/async-client/: index.html
references/errors/: index.html
references/methods/: index.html
references/pullers/: index.html
references/sync-client/: index.html
search/: search_index.json
server/events/: index.html
server/implementation/: index.html
server/limitations/: index.html
server/references/: index.html
server/server/: index.html
