[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtm"
version = "0.1.0"
dependencies = [
    "aiohttp",
    "requests",
    "msgspec"
]
requires-python = ">= 3.8"

[project.scripts]
mailtm = "mailtm.cli:call_version"


[tool.ruff]
line-length = 79
indent-width = 4

[tool.towncrier]
directory = "changes"